--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ initializeClock('cuntdown', deadline);
   Share your thoughts?<br>
   <a>#tumblrgeddon</a><br>
   Got feedback? Wanna add something?<br>
-  Mail to <a href="mailto:non-creative-mail-name@tumbl.rip">i-wanna-use-this-service-in-the-future-too@tumbl.rip</a> or any other mail address at this domain.
+  Mail to <a href="mailto:non-creative-mail-name@tumbl.rip">no-future@tumbl.rip</a> or any other mail address at this domain.
 
 </footer>
 </body>
