--- a/index.html
+++ b/index.html
@@ -19,10 +19,16 @@
     }
     #cuntdown {
       border: 0;
-      font-size: 250%;
-      font-weight: normal;
       min-height: 3em;
       text-align: center;
+    }
+    h1,h2,h3,h4,h5,h6 {
+      font-size: 250%;
+    }
+    h3 {
+    }
+    h3, h5 {
+      font-weight: normal;
       font-family: "Helvetica Neue Light", "HelveticaNeue-Light", "Helvetica Neue", Calibri, Helvetica, Arial;
     }
     strong{
@@ -35,7 +41,7 @@
 </head>
 <body>
 <h1>Tumblrggedon</h1>
-<h3>THE END IS NEAR</h3>
+<h3>The end is near!</h3>
 <h5 id="cuntdown"><strong><span class="d">0</span> day<span class="ds">s</span></strong>, <strong><span class="h">0</span> hour<span class="hs">s</span></strong>, <strong><span class="m">0</span> minute<span class="ms">s</span></strong> and <strong><span class="s">0</span> second<span class="ss">s</span></strong></h5>
 <div>
   <b>An open letter to tumblr</b>
@@ -99,15 +105,14 @@ initializeClock('cuntdown', deadline);
 </script>
 <br><br><br><br><br>
 <footer>
-  <a href="https://www.businessinsider.com/tumblr-alternatives-that-allow-nsfw-2018-12?r=US&IR=T">tumblr alternatives - Business Insider</a><br>
-  <br>
-  Note: This site is not associated with the website this open letter is targeted to.<br>
+  <a href="https://www.businessinsider.com/tumblr-alternatives-that-allow-nsfw-2018-12?r=US&IR=T">Business Insider - tumblr alternatives</a><br>
   <br>
   Share your thoughts?<br>
   <a>#tumblrgeddon</a><br>
   Got feedback? Wanna add something?<br>
   Mail to <a href="mailto:non-creative-mail-name@tumbl.rip">no-future@tumbl.rip</a> or any other mail address at this domain.
-
+  <br>
+  Note: This site is not associated with the website this open letter is targeted to.<br>
 </footer>
 </body>
 </html>
