--- a/index.html
+++ b/index.html
@@ -25,6 +25,12 @@
     h1,h2,h3,h4,h5,h6 {
       font-size: 250%;
     }
+    h4 {
+      font-size: 200%;
+    }
+    blockquote {
+      font-size: 150%;
+    }
     h3 {
     }
     h3, h5 {
@@ -40,11 +46,10 @@
   </style>
 </head>
 <body>
-<h1>Tumblrggedon</h1>
-<h3>The end is near!</h3>
+<h3><strong>Tumblrggedon</strong> – The end is near!</h3>
 <h5 id="cuntdown"><strong><span class="d">0</span> day<span class="ds">s</span></strong>, <strong><span class="h">0</span> hour<span class="hs">s</span></strong>, <strong><span class="m">0</span> minute<span class="ms">s</span></strong> and <strong><span class="s">0</span> second<span class="ss">s</span></strong></h5>
 <div>
-  <b>An open letter to tumblr</b>
+  <h4>An open letter to tumblr</h4>
   <blockquote>
     Plz dont ruin yourself like that.<br>
     Stop now. You still can.<br>
