--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 </head>
 <body>
 <h3><strong>Tumblrggedon</strong> – The end is near!</h3>
-<h5 id="cuntdown"><strong><span class="d">0</span> day<span class="ds">s</span></strong>, <strong><span class="h">0</span> hour<span class="hs">s</span></strong>, <strong><span class="m">0</span> minute<span class="ms">s</span></strong> and <strong><span class="s">0</span> second<span class="ss">s</span></strong></h5>
+<h5 id="cuntdown">Just <strong><span class="d">0</span> day<span class="ds">s</span></strong>, <strong><span class="h">0</span> hour<span class="hs">s</span></strong>, <strong><span class="m">0</span> minute<span class="ms">s</span></strong> and <strong><span class="s">0</span> second<span class="ss">s</span></strong></h5>
 <div>
   <h4>An open letter to tumblr</h4>
   <blockquote>
@@ -110,6 +110,7 @@ initializeClock('cuntdown', deadline);
 </script>
 <br><br><br><br><br>
 <footer>
+  <a href="https://17decemberarchive.tumblr.com/post/180831814386/this-is-how-the-archive-team-is-going-to-save">Archive time - Help us to archive endangered tumblrs this month.</a><br>
   <a href="https://www.businessinsider.com/tumblr-alternatives-that-allow-nsfw-2018-12?r=US&IR=T">Business Insider - tumblr alternatives</a><br>
   <br>
   Share your thoughts?<br>
