--- a/index.html
+++ b/index.html
@@ -47,7 +47,14 @@
 </head>
 <body>
 <h3><strong>Tumblrggedon</strong> – The end is near!</h3>
-<h5 id="cuntdown">Just <strong><span class="d">0</span> day<span class="ds">s</span></strong>, <strong><span class="h">0</span> hour<span class="hs">s</span></strong>, <strong><span class="m">0</span> minute<span class="ms">s</span></strong> and <strong><span class="s">0</span> second<span class="ss">s</span></strong></h5>
+<h5 id="cuntdown">
+  Just
+  <strong><span class="d">0</span> day<span class="ds">s</span></strong>,
+  <strong><span class="h">0</span> hour<span class="hs">s</span></strong>,
+  <strong><span class="m">0</span> minute<span class="ms">s</span></strong> and
+  <strong><span class="s">0</span> second<span class="ss">s</span></strong>
+  left.
+</h5>
 <div>
   <h4>An open letter to tumblr</h4>
   <blockquote>
@@ -56,6 +63,22 @@
     We will forgive you.<br>
   </blockquote>
 </div>
+
+<br><br><br><br><br>
+<footer>
+  <a href="https://17decemberarchive.tumblr.com/post/180831814386/this-is-how-the-archive-team-is-going-to-save">Archive time - Help us to archive endangered tumblrs this month.</a><br>
+  <a href="https://www.businessinsider.com/tumblr-alternatives-that-allow-nsfw-2018-12?r=US&IR=T">Business Insider - tumblr alternatives</a><br>
+  <br>
+  Share your thoughts?<br>
+  <a>#tumblrgeddon</a><br>
+  Got feedback? Wanna add something?<br>
+  Mail to <a href="mailto:non-creative-mail-name@tumbl.rip">no-future@tumbl.rip</a> or any other mail address at this domain.
+  <br>
+  Note: This site is not associated with the website this open letter is targeted to.<br>
+</footer>
+
+
+
 <script>
 function getTimeRemaining(endtime) {
   var t = Date.parse(endtime) - Date.parse(new Date());
@@ -108,17 +131,5 @@ var deadline = new Date(Date.parse('2018-12-17'));
 initializeClock('cuntdown', deadline);
 
 </script>
-<br><br><br><br><br>
-<footer>
-  <a href="https://17decemberarchive.tumblr.com/post/180831814386/this-is-how-the-archive-team-is-going-to-save">Archive time - Help us to archive endangered tumblrs this month.</a><br>
-  <a href="https://www.businessinsider.com/tumblr-alternatives-that-allow-nsfw-2018-12?r=US&IR=T">Business Insider - tumblr alternatives</a><br>
-  <br>
-  Share your thoughts?<br>
-  <a>#tumblrgeddon</a><br>
-  Got feedback? Wanna add something?<br>
-  Mail to <a href="mailto:non-creative-mail-name@tumbl.rip">no-future@tumbl.rip</a> or any other mail address at this domain.
-  <br>
-  Note: This site is not associated with the website this open letter is targeted to.<br>
-</footer>
 </body>
 </html>
