--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
 <br><br><br><br><br>
 <footer>
-  <a href="https://17decemberarchive.tumblr.com/post/180831814386/this-is-how-the-archive-team-is-going-to-save">Archive time - Help us to archive endangered tumblrs this month.</a><br>
+  <a href="https://17decemberarchive.tumblr.com/post/180831814386/this-is-how-the-archive-team-is-going-to-save">Archive time - Help us to archive endangered tumblrs</a><br>
   <a href="https://www.businessinsider.com/tumblr-alternatives-that-allow-nsfw-2018-12?r=US&IR=T">Business Insider - tumblr alternatives</a><br>
   <br>
   Share your thoughts?<br>
