--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <head>
   <meta http-equiv="Content-type" content="text/html; charset=utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+  <meta name="description" content="The end is near. RIP tumblr.">
+  <meta property="og:title" content="The end is near. RIP tumblr." />
+  <meta property="og:description" content="Save endangered tumblrs before 17. December.">
+  <title>Tumblr - plz stop.docx</title>
+
   <style>
     body {
       background-color: #36465d;
