--- a/index.html
+++ b/index.html
@@ -48,6 +48,14 @@
     .singular {
       visibility: hidden;
     }
+    li {
+      /* list-style: none;*/
+      padding-top: 0.5em;
+    }
+    .content, footer {
+      text-align: left;
+      padding: 2em;
+    }
   </style>
 </head>
 <body>
@@ -69,13 +77,46 @@
   </blockquote>
 </div>
 
-<br><br><br><br><br>
-<footer>
-  <a href="https://17decemberarchive.tumblr.com/post/180831814386/this-is-how-the-archive-team-is-going-to-save">Archive time - Help us to archive endangered tumblrs</a><br>
-  <a href="https://www.businessinsider.com/tumblr-alternatives-that-allow-nsfw-2018-12?r=US&IR=T">Business Insider - tumblr alternatives</a><br>
+<div class="content">
+  What you can do:
+  <ul>
+    <li>
+      Archival efforts:<br>
+      <ul>
+        <li>
+        <a href="https://17decemberarchive.tumblr.com/post/180831814386/this-is-how-the-archive-team-is-going-to-save">Archive time - Help us to archive endangered tumblrs</a><br>
+        </li>
+      </ul>
+    </li><li>
+      Fandom related archival efforts:
+      <ul>
+        <li>
+        <a href="https://derpibooru.org/uppers/tumblr-nsfw-upload-thread">Bronies</a>
+        <!--</li><li>-->
+        </li>
+      </ul>
+    </li><li>
+      Download your blog yourself.<br>
+    Thanks to <strong>GDPR</strong>, you have the <strong>right to download all your stuff</strong>!<br>
+    First go to the <strong>Account icon</strong> in the upper right hand of the dashboard.<br>
+    Then, choose <strong>Settings</strong> and the blog you want to save.<br>
+    Now click the <strong>Export</strong> button at the bottom of the new screen.<br>
+    The site will start processing your blog information (which will take forever, btw).<br>
+    Once Tumblr is done processing your blog, a <strong>Download backup button</strong> will appear.<br>
+    Click on it and download the ZIP file to your device.<br>
+    You'll need to repeat this process for every Tumblr blog you have on your account.<br>
+    <a href="https://www.cnet.com/how-to/how-to-download-and-save-all-your-tumblr-content/">(source)</a>
+    </li><li>
+      <a href="https://www.businessinsider.com/tumblr-alternatives-that-allow-nsfw-2018-12?r=US&IR=T">tumblr alternatives - Business Insider</a><br>
   <br>
-  Share your thoughts?<br>
-  <a>#tumblrgeddon</a><br>
+
+    </li>
+  </ul>
+</div>
+
+<footer>
+  Share your thoughts? <a href="http://twitter.com/home?status=https://tumbl.rip%20%23tumblrgeddon%20Help%20us%20save%20tumblr%20blogs">#tumblrgeddon</a><br>
+  <br>
   Got feedback? Wanna add something?<br>
   Mail to <a href="mailto:non-creative-mail-name@tumbl.rip">no-future@tumbl.rip</a> or any other mail address at this domain.
   <br>
