--- a/index.html
+++ b/index.html
@@ -138,12 +138,18 @@
 </div>
 
 <footer>
-  Share your thoughts? <a href="http://twitter.com/home?status=https://tumbl.rip%20%23tumblrgeddon%20Help%20us%20save%20tumblr%20blogs">#tumblrgeddon</a><br>
+  Share your thoughts?<br>
+  <a href="http://twitter.com/home?status=https://tumbl.rip%20%23tumblrgeddon%20Help%20us%20save%20tumblr%20blogs">#tumblrgeddon</a><br>
   <br>
   Got feedback? Wanna add something?<br>
-  Mail to <a href="mailto:non-creative-mail-name@tumbl.rip">no-future@tumbl.rip</a> or any other mail address at this domain.
+  Mail to <a href="mailto:non-creative-mail-name@tumbl.rip">no-future@tumbl.rip</a> or any other mail address at this domain.<br>
+  Or directly fork and edit this page <a href="https://github.com/tumbl-rip/tumbl-rip">on GitHub</a>.<br>
+
+  <br>
+  <br>
   <br>
   Note: This site is not associated with the website this open letter is targeted to.<br>
+  All trademarks, service marks, trade names, trade dress, product names and logos appearing on the site are the property of their respective owners.<br>
 </footer>
 
 
